--- a/H7.ioc
+++ b/H7.ioc
@@ -4,47 +4,50 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=USART1_RX
-Dma.Request1=USART1_TX
+Dma.Request0=USART3_RX
+Dma.Request1=USART3_TX
 Dma.RequestsNb=2
-Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.0.EventEnable=DISABLE
-Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.0.Instance=DMA1_Stream0
-Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.0.Mode=DMA_NORMAL
-Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.0.RequestNumber=1
-Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART1_RX.0.SignalID=NONE
-Dma.USART1_RX.0.SyncEnable=DISABLE
-Dma.USART1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART1_RX.0.SyncRequestNumber=1
-Dma.USART1_RX.0.SyncSignalID=NONE
-Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.1.EventEnable=DISABLE
-Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.1.Instance=DMA1_Stream1
-Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.1.Mode=DMA_NORMAL
-Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.1.RequestNumber=1
-Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART1_TX.1.SignalID=NONE
-Dma.USART1_TX.1.SyncEnable=DISABLE
-Dma.USART1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART1_TX.1.SyncRequestNumber=1
-Dma.USART1_TX.1.SyncSignalID=NONE
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.0.EventEnable=DISABLE
+Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.0.Instance=DMA1_Stream0
+Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.0.Mode=DMA_NORMAL
+Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.0.RequestNumber=1
+Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_RX.0.SignalID=NONE
+Dma.USART3_RX.0.SyncEnable=DISABLE
+Dma.USART3_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_RX.0.SyncRequestNumber=1
+Dma.USART3_RX.0.SyncSignalID=NONE
+Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.1.EventEnable=DISABLE
+Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.1.Instance=DMA1_Stream1
+Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.1.Mode=DMA_NORMAL
+Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.1.RequestNumber=1
+Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.1.SignalID=NONE
+Dma.USART3_TX.1.SyncEnable=DISABLE
+Dma.USART3_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.1.SyncRequestNumber=1
+Dma.USART3_TX.1.SyncSignalID=NONE
+FREERTOS.BinarySemaphores01=cmdRxBinarySem,Dynamic,NULL
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01
+FREERTOS.Mutexes01=usart3Mutex,Dynamic,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,128,CmdTask,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -56,7 +59,7 @@ Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
-Mcu.IP6=USART1
+Mcu.IP6=USART3
 Mcu.IPNb=7
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
@@ -66,8 +69,8 @@ Mcu.Pin2=PH0-OSC_IN (PH0)
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PE10
 Mcu.Pin5=PE12
-Mcu.Pin6=PB14
-Mcu.Pin7=PB15
+Mcu.Pin6=PD8
+Mcu.Pin7=PD9
 Mcu.Pin8=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin9=VP_SYS_VS_tim17
 Mcu.PinsNb=10
@@ -77,8 +80,8 @@ Mcu.UserName=STM32H750VBTx
 MxCube.Version=6.11.0
 MxDb.Version=DB.6.0.110
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -94,20 +97,20 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
-NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PB14.Locked=true
-PB14.Mode=Asynchronous
-PB14.Signal=USART1_TX
-PB15.Locked=true
-PB15.Mode=Asynchronous
-PB15.Signal=USART1_RX
 PC14-OSC32_IN\ (OSC32_IN).Locked=true
 PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
+PD8.Locked=true
+PD8.Mode=Asynchronous
+PD8.Signal=USART3_TX
+PD9.Locked=true
+PD9.Mode=Asynchronous
+PD9.Signal=USART3_RX
 PE10.Locked=true
 PE10.Signal=GPIO_Output
 PE12.Locked=true
@@ -149,7 +152,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=100781250
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -221,9 +224,8 @@ RCC.VCO3OutputFreq_Value=100781250
 RCC.VCOInput1Freq_Value=5000000
 RCC.VCOInput2Freq_Value=1562500
 RCC.VCOInput3Freq_Value=781250
-USART1.BaudRate=115200
-USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
-USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim17.Mode=TIM17
