--- a/H7.ioc
+++ b/H7.ioc
@@ -43,11 +43,11 @@ Dma.USART3_TX.1.SyncEnable=DISABLE
 Dma.USART3_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART3_TX.1.SyncRequestNumber=1
 Dma.USART3_TX.1.SyncSignalID=NONE
-FREERTOS.BinarySemaphores01=cmdRxBinarySem,Dynamic,NULL
+FREERTOS.BinarySemaphores01=cmdRxBinarySem,Dynamic,NULL;ms5837BinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,configTOTAL_HEAP_SIZE
 FREERTOS.Mutexes01=usart3Mutex,Dynamic,NULL
-FREERTOS.Tasks01=defaultTask,24,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL;ms5837Task,8,256,Ms5837Task,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
