--- a/H7.ioc
+++ b/H7.ioc
@@ -4,45 +4,45 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=USART3_RX
-Dma.Request1=USART3_TX
+Dma.Request0=USART3_TX
+Dma.Request1=USART3_RX
 Dma.RequestsNb=2
-Dma.USART3_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.0.EventEnable=DISABLE
-Dma.USART3_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_RX.0.Instance=DMA1_Stream0
-Dma.USART3_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.0.Mode=DMA_NORMAL
-Dma.USART3_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.0.RequestNumber=1
-Dma.USART3_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_RX.0.SignalID=NONE
-Dma.USART3_RX.0.SyncEnable=DISABLE
-Dma.USART3_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_RX.0.SyncRequestNumber=1
-Dma.USART3_RX.0.SyncSignalID=NONE
-Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.1.EventEnable=DISABLE
-Dma.USART3_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.1.Instance=DMA1_Stream1
-Dma.USART3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.1.Mode=DMA_NORMAL
-Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.1.RequestNumber=1
-Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_TX.1.SignalID=NONE
-Dma.USART3_TX.1.SyncEnable=DISABLE
-Dma.USART3_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_TX.1.SyncRequestNumber=1
-Dma.USART3_TX.1.SyncSignalID=NONE
+Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.1.EventEnable=DISABLE
+Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_RX.1.Instance=DMA1_Stream0
+Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.1.Mode=DMA_NORMAL
+Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.1.RequestNumber=1
+Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_RX.1.SignalID=NONE
+Dma.USART3_RX.1.SyncEnable=DISABLE
+Dma.USART3_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_RX.1.SyncRequestNumber=1
+Dma.USART3_RX.1.SyncSignalID=NONE
+Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.0.EventEnable=DISABLE
+Dma.USART3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART3_TX.0.Instance=DMA1_Stream1
+Dma.USART3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.0.Mode=DMA_NORMAL
+Dma.USART3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.0.RequestNumber=1
+Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.0.SignalID=NONE
+Dma.USART3_TX.0.SyncEnable=DISABLE
+Dma.USART3_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.0.SyncRequestNumber=1
+Dma.USART3_TX.0.SyncSignalID=NONE
 FREERTOS.BinarySemaphores01=cmdRxBinarySem,Dynamic,NULL;ms5837BinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,configTOTAL_HEAP_SIZE
@@ -252,7 +252,8 @@ RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=239
-USART3.IPParameters=VirtualMode-Asynchronous
+USART3.BaudRate=115200
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
