--- a/H7.ioc
+++ b/H7.ioc
@@ -253,7 +253,8 @@ RCC.VCOInput3Freq_Value=781250
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=239
 USART3.BaudRate=115200
-USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
+USART3.DMADisableonRxErrorParam=ADVFEATURE_DMA_ENABLEONRXERROR
+USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,DMADisableonRxErrorParam
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
