--- a/H7.ioc
+++ b/H7.ioc
@@ -4,50 +4,51 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
-Dma.Request0=USART3_TX
-Dma.Request1=USART3_RX
+Dma.Request0=UART8_RX
+Dma.Request1=UART8_TX
 Dma.RequestsNb=2
-Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.1.EventEnable=DISABLE
-Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_RX.1.Instance=DMA1_Stream0
-Dma.USART3_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.1.Mode=DMA_NORMAL
-Dma.USART3_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.1.RequestNumber=1
-Dma.USART3_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_RX.1.SignalID=NONE
-Dma.USART3_RX.1.SyncEnable=DISABLE
-Dma.USART3_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_RX.1.SyncRequestNumber=1
-Dma.USART3_RX.1.SyncSignalID=NONE
-Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.0.EventEnable=DISABLE
-Dma.USART3_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.0.Instance=DMA1_Stream1
-Dma.USART3_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.0.Mode=DMA_NORMAL
-Dma.USART3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.0.RequestNumber=1
-Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_TX.0.SignalID=NONE
-Dma.USART3_TX.0.SyncEnable=DISABLE
-Dma.USART3_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_TX.0.SyncRequestNumber=1
-Dma.USART3_TX.0.SyncSignalID=NONE
-FREERTOS.BinarySemaphores01=cmdRxBinarySem,Dynamic,NULL;ms5837BinarySem,Dynamic,NULL
+Dma.UART8_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART8_RX.0.EventEnable=DISABLE
+Dma.UART8_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_RX.0.Instance=DMA1_Stream0
+Dma.UART8_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART8_RX.0.Mode=DMA_NORMAL
+Dma.UART8_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART8_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART8_RX.0.RequestNumber=1
+Dma.UART8_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART8_RX.0.SignalID=NONE
+Dma.UART8_RX.0.SyncEnable=DISABLE
+Dma.UART8_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART8_RX.0.SyncRequestNumber=1
+Dma.UART8_RX.0.SyncSignalID=NONE
+Dma.UART8_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.UART8_TX.1.EventEnable=DISABLE
+Dma.UART8_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART8_TX.1.Instance=DMA1_Stream1
+Dma.UART8_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART8_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART8_TX.1.Mode=DMA_NORMAL
+Dma.UART8_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART8_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART8_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.UART8_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART8_TX.1.RequestNumber=1
+Dma.UART8_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.UART8_TX.1.SignalID=NONE
+Dma.UART8_TX.1.SyncEnable=DISABLE
+Dma.UART8_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.UART8_TX.1.SyncRequestNumber=1
+Dma.UART8_TX.1.SyncSignalID=NONE
+FREERTOS.BinarySemaphores01=ms5837BinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,configTOTAL_HEAP_SIZE
-FREERTOS.Mutexes01=usart3Mutex,Dynamic,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL;ms5837Task,8,128,Ms5837Task,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,configTOTAL_HEAP_SIZE,Queues01
+FREERTOS.Mutexes01=usart8Mutex,Dynamic,NULL
+FREERTOS.Queues01=rxQueue,3,rxStruct,0,Dynamic,NULL,NULL;txQueue,3,txStruct,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL;ms5837Task,8,256,Ms5837Task,As external,NULL,Dynamic,NULL,NULL;txTask,40,256,TxTask,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -61,7 +62,7 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM3
-Mcu.IP7=USART3
+Mcu.IP7=UART8
 Mcu.IPNb=8
 Mcu.Name=STM32H750VBTx
 Mcu.Package=LQFP100
@@ -74,10 +75,10 @@ Mcu.Pin2=PH0-OSC_IN (PH0)
 Mcu.Pin3=PH1-OSC_OUT (PH1)
 Mcu.Pin4=PE10
 Mcu.Pin5=PE12
-Mcu.Pin6=PD8
-Mcu.Pin7=PD9
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
+Mcu.Pin6=PB8
+Mcu.Pin7=PB9
+Mcu.Pin8=PE0
+Mcu.Pin9=PE1
 Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -102,7 +103,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
-NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.UART8_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB8.GPIO_Label=II2_SCL
@@ -125,12 +126,10 @@ PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
 PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
-PD8.Locked=true
-PD8.Mode=Asynchronous
-PD8.Signal=USART3_TX
-PD9.Locked=true
-PD9.Mode=Asynchronous
-PD9.Signal=USART3_RX
+PE0.Mode=Asynchronous
+PE0.Signal=UART8_RX
+PE1.Mode=Asynchronous
+PE1.Signal=UART8_TX
 PE10.Locked=true
 PE10.Signal=GPIO_Output
 PE12.Locked=true
@@ -172,7 +171,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_UART8_Init-UART8-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=50390625
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -252,10 +251,6 @@ RCC.VCOInput2Freq_Value=781250
 RCC.VCOInput3Freq_Value=781250
 TIM3.IPParameters=Prescaler
 TIM3.Prescaler=239
-USART3.BaudRate=115200
-USART3.DMADisableonRxErrorParam=ADVFEATURE_DMA_ENABLEONRXERROR
-USART3.IPParameters=VirtualMode-Asynchronous,BaudRate,DMADisableonRxErrorParam
-USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim17.Mode=TIM17
