--- a/H7.ioc
+++ b/H7.ioc
@@ -45,10 +45,9 @@ Dma.UART8_TX.1.SyncRequestNumber=1
 Dma.UART8_TX.1.SyncSignalID=NONE
 FREERTOS.BinarySemaphores01=ms5837BinarySem,Dynamic,NULL
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,Mutexes01,configTOTAL_HEAP_SIZE,Queues01
-FREERTOS.Mutexes01=usart8Mutex,Dynamic,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,BinarySemaphores01,configTOTAL_HEAP_SIZE,Queues01
 FREERTOS.Queues01=rxQueue,3,rxStruct,0,Dynamic,NULL,NULL;txQueue,3,txStruct,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL;ms5837Task,8,256,Ms5837Task,As external,NULL,Dynamic,NULL,NULL;txTask,40,256,TxTask,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;cmdTask,40,256,CmdTask,As external,NULL,Dynamic,NULL,NULL;ms5837Task,8,128,Ms5837Task,As external,NULL,Dynamic,NULL,NULL;txTask,40,128,TxTask,As external,NULL,Dynamic,NULL,NULL
 FREERTOS.configTOTAL_HEAP_SIZE=15360
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
